# ParaCL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
flags/: CMakeLists.txt
include/: ast.hpp  driver.hpp  inode.hpp  interpreter.hpp  interpritator.hpp  node.hpp
source/: main.cpp  node.cc  node.cpp
source/grammar/: lexer.l  node.hpp  parser.y
src/: main.cpp
src/ast/: CMakeLists.txt
src/ast/include/ast/: ast.hpp  fwd.hpp  inode.hpp  node.hpp
src/ast/source/: node.cpp
src/error/: CMakeLists.txt
src/error/include/error/: error.hpp  error_print.hpp
src/error/source/: error_print.cpp
src/interpreter/: CMakeLists.txt
src/interpreter/include/interpreter/: interpreter.hpp
src/parser/: CMakeLists.txt  lexer.l  parser.y
src/visitor/: CMakeLists.txt
src/visitor/include/visitor/: ast_visitor.hpp  semantic_visitor.hpp  visitor_fwd.hpp
src/visitor/source/: semantic_visitor.cpp
tests/: 001.inp  CMakeLists.txt  interpreter_tests.cpp  parser_tests.cpp
tests/e2e/: run_tests.sh
tests/e2e/collatz/: program.pcl
tests/e2e/errors/assign_in_while/: program.pcl
tests/e2e/errors/bracket_error_while/: program.pcl
tests/e2e/errors/division_by_zero/: expected.txt  program.pcl
tests/e2e/errors/out_of_range/: expected.txt  program.pcl
tests/e2e/errors/scope_error/: expected.txt  program.pcl
tests/e2e/errors/skipped_semicolon/: expected.txt  program.pcl
tests/e2e/errors/undefined_variable/: program.pcl
tests/e2e/factorial/: program.pcl
tests/e2e/fibonachi/: program.pcl
tests/e2e/gcd_lcm_invariant/: program.pcl
tests/e2e/success/collatz/: expected.txt
tests/e2e/success/gcd_lcm_invariant/: expected.txt  input.txt
tests/e2e/success/primes/: program.pcl
tests/unit/: interpreter_tests.cpp  parser_tests.cpp
